<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ozadje"
    android:padding="10dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/stranka_naslov1"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/id_stranka_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/stranka_naslov2"/>
    
    <TextView
        android:id="@+id/id_stranka_naslov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:lines="4"/>
	
	<LinearLayout
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="right"
    	android:orientation="horizontal"
    	android:layout_marginBottom="5dp">
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/tarifa"
        	android:textSize="16sp"/>

    	<Spinner 
    		android:id="@+id/id_spinner"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:entries="@array/tarifa_vrednosti"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_preklici_stranko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/taxi_button"
            android:text="@string/izbira_cancel" />

        <Button
            android:id="@+id/id_potrdi_stranko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taxi_button"
            android:text="@string/cilj_potrdi_tocko" />
    </LinearLayout>
    
</LinearLayout>