<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ozadje"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/cilj_tocka_naslov"
        android:textSize="16sp"
        android:lines="2"/>

    <TextView
        android:id="@+id/id_tocka_naslov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lines="4"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_preklici_tocko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/taxi_button"
            android:text="@string/izbira_cancel" />

        <Button
            android:id="@+id/id_potrdi_tocko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taxi_button"
            android:text="@string/cilj_potrdi_tocko" />
    </LinearLayout>

</LinearLayout>