<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ozadje"
    android:padding="10dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/taxist_naslov"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/id_taxist_ime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/id_taxist_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_preklici_taxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/taxi_button"
            android:text="@string/izbira_cancel" />

        <Button
            android:id="@+id/id_potrdi_taxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taxi_button"
            android:text="@string/cilj_potrdi_tocko" />
        
    </LinearLayout>
    
</LinearLayout>