<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrijavaGTalk" >

    <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <QuickContactBadge
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/googletalk"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/talk_name"
                android:maxLines="1"
                android:gravity="center"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"/>
            
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/talk_email"
                android:maxLines="1"
                android:gravity="center"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/passGTalk"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/talk_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/taxi_button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/prijava" />

			<TextView
			    android:id="@+id/tvNapaka"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="5dp"
			    android:text="@string/talk_error"
			    android:textColor="@android:color/holo_red_dark"
			    android:textSize="16sp"
			    android:visibility="invisible"/>

        </LinearLayout>

</RelativeLayout>
